add upload music

--- a/MusicPortal.WEB/Views/Home/MusicPage.cshtml
+++ b/MusicPortal.WEB/Views/Home/MusicPage.cshtml
@@ -5,7 +5,7 @@
         <h3>Music: @Model.Name</h3>
         <div>
             <a class="">Жанр: @Model.Genre</a><br />
-            <a>Трек: pass</a>
+            <a>Трек: @Model.filesMusic</a>
             
             
         </div>
