--- a/MusicPortal.WEB/wwwroot/css/style.css
+++ b/MusicPortal.WEB/wwwroot/css/style.css
@@ -1,6 +1,6 @@
-﻿body {
-    
+body {
 }
+
 .author-card {
     display: flex;
     align-items: center;
@@ -47,8 +47,8 @@
 .audio-player {
     margin: 0 auto;
 }
-    
-*/
+
+    */
 
     .audio-player,
     .audio-player div,
@@ -65,8 +65,6 @@
 
 div.audio-player {
     position: relative;
-    
-    
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
@@ -206,7 +204,6 @@ div.audio-player {
     top: -2px;
 }
 
-/* Time Float Box */
 .mejs-controls .mejs-time-rail .mejs-time-float {
     position: absolute;
     display: none;
@@ -227,4 +224,54 @@ div.audio-player {
     font-weight: bold;
     color: #666666;
     text-align: center;
+}
+
+.dropbtn {
+    background-color: #f5f5f5;
+    color: #333;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    font-family: Arial, sans-serif;
+    transition: background-color 0.2s ease-in-out;
+}
+
+    .dropbtn:hover {
+        background-color: #e5e5e5;
+    }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    background-color: #f5f5f5;
+    min-width: 160px;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    color: #333;
+}
+
+    .dropdown-content a {
+        display: block;
+        padding: 10px 20px;
+        text-decoration: none;
+        color: #333;
+        transition: background-color 0.2s ease-in-out;
+    }
+
+        .dropdown-content a:hover {
+            background-color: #e5e5e5;
+        }
+
+.show {
+    display: block;
 }
