--- a/MusicPortal.WEB/Views/Shared/_Layout.cshtml
+++ b/MusicPortal.WEB/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -15,12 +15,12 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body style = "background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1));">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white mb-3" style = "background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1));">
             <div class="container">
-                
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">54Beats</a>
+
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style = "color:red;">54beats</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -43,21 +43,21 @@
                 </div>
                 <partial name="_LoginPartial" />
             </div>
-            
+
         </nav>
     </header>
-    
+
     <div class="container" >
-        
+
         <main role="main" class="pb" >
             @RenderBody()
         </main>
     </div>
-    
 
-    
-     
-   
+
+
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
