--- a/MusicPortal.WEB/Views/Shared/_Layout.cshtml
+++ b/MusicPortal.WEB/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Subcribers">Подписки</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MyMusics" asp-action="Index">Мой треки</a>
+                        </li>
                     </ul>
                 </div>
                 <partial name="_LoginPartial" />
@@ -54,6 +57,7 @@
         </main>
     </div>
     
+
 
     
      
